# Restime

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
macos/: Makefile  Package.swift  README.md
macos/Assets/: AppIcon.icns
macos/Sources/RestimeMenu/: AccountHistoryStore.swift  AppDelegate.swift  CodexUsage.swift  CodexUsageReader.swift
macos/Tests/RestimeMenuTests/: AccountHistoryStoreTests.swift  CodexUsageReaderTests.swift
macos/Tools/: GenerateAppIcon.swift
src/: codex_auth_reader.h  codex_usage_reader.cpp  codex_usage_reader.h  main.cpp  refresh_coordinator.h  session_usage_reader.h  settings.h  simple_json.h  usage.h  usage_formatter.cpp
tests/: test_main.cpp
tools/: build-release.ps1
windows/: CMakeLists.txt  CMakePresets.json  plan.md
windows/src/: account_history_store.cpp  account_history_store.h  app.cpp  app.h  codex_auth_reader.cpp  refresh_coordinator.cpp  session_usage_reader.cpp  settings.cpp  simple_json.cpp  tray_controller.cpp  tray_controller.h  usage.cpp  usage_formatter.h
windows/tests/: test_main.cpp
windows/tools/: measure-resources.ps1  test.ps1
